src/styles/global.css
@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap");

* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}
html {
  scroll-behavior: smooth;
}
:root {
  --bg-color: #f5f6fa;
  --text-color: #2f3640;
  --header-bg-color: #dcdde1;
  --card-color: white;
}
[data-theme="dark"] {
  --bg-color: #4b4b4b;
  --text-color: white;
  --header-bg-color: #3d3d3d;
  --card-color: #5b5b5b;
}
body {
  background-color: var(--bg-color);
  color: var(--text-color);
  font-family: "Poppins", sans-serif;
}

a {
  text-decoration: none;
  color: var(--text-color);
}
ul {
  list-style: none;
}
.container {
  width: 100%;
}
.box {
  display: flex;
}
main {
  flex: 1;
}
section {
  text-align: center;
  min-height: 100dvh;
  /* display: flex; */
  /* justify-content: center; */
  /* align-items: center; */
  padding: 1rem 3rem;
  /* flex-direction: column; */
}
section:nth-child(odd) {
}
section:nth-child(even) {
}
section > h2 {
  margin-block: 1rem;
  font-size: 2rem;
}
.btn {
  background-color: #2d3436;
  padding: 0.6rem 1rem;
  border-radius: 0.2rem;
  color: white;
  transition: 0.3s ease-in-out;
}
.btn:hover {
  background-color: #636e72;
  box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
}

.dark-icon {
  display: none;
}
.theme-toggle-button {
  position: fixed;
  bottom: 1.5rem;
  right: 1.5rem;
  z-index: 11;
  border: 1px solid var(--text-color);
  border-radius: 50%;
}
@media only screen and (max-width: 600px) {
  section {
    /* min-height: auto;
    height: auto; */
    padding: 3rem 1.1rem;
  }
  .theme-toggle-button {
    top: 0.2rem;
    right: 1rem;
    bottom: auto;
    border: none;
    z-index: 14;
  }
}

